--- a/ms-employe.yml
+++ b/ms-employe.yml
@@ -1,8 +1,33 @@
 spring:
+  application:
+    name: ms-employe
   data:
     mongodb:
       uri: mongodb://localhost:27017/employes_db
-  application:
-    name: ms-employe
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 server:
   port: 8082
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+    operationsSorter: method
+    tagsSorter: alpha
+    disable-swagger-default-url: true
+  show-actuator: true
+  paths-to-match: /api/**
+  packages-to-scan: tn.esprit.spring.microservices_Employe.controller
+  cache:
+    disabled: true
+
+logging:
+  level:
+    org.springdoc: DEBUG
+    org.springframework.web: DEBUG
