--- a/ms-entreprise.yml
+++ b/ms-entreprise.yml
@@ -1,1 +1,19 @@
+spring:
+  application:
+    name: ms-entreprise
+  datasource:
+    url: jdbc:mysql://localhost:3306/entreprise_db?createDatabaseIfNotExist=true
+    username: root
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
+
+server:
+  port: 9091
 
