--- a/ms-entreprise.yml
+++ b/ms-entreprise.yml
@@ -1,4 +1,7 @@
+
 spring:
+  application:
+    name: ms-entreprise
   datasource:
     url: jdbc:mysql://localhost:3306/entreprise_db?createDatabaseIfNotExist=true
     username: root
