--- a/ms-entreprise.yml
+++ b/ms-entreprise.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: ms-entreprise
   datasource:
-    url: jdbc:mysql://localhost:3306/entreprise_db?createDatabaseIfNotExist=true
-    username: root
-    password:
+  url: jdbc:mysql://mysql:3306/entreprise_db?createDatabaseIfNotExist=true
+  username: root
+  password: root
   jpa:
     hibernate:
       ddl-auto: update
